# open-retrieval

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
app/: dependencies.py  main.py
app/models/: file.py
app/providers/embedding/: factory.py  ollama.py  voyage.py
app/providers/vector_store/: factory.py  pinecone.py  postgres.py
app/routers/: files.py
app/tasks/: index.py
